Remove right alignment and width of .nav-toggle to fix iPad alignment issue

--- a/wcphilly2020.css
+++ b/wcphilly2020.css
@@ -158,9 +158,7 @@ input[type="submit"]:hover {
 .nav-toggle {
   bottom: 100%;
   position: absolute;
-  right: 0;
   top: 4.2rem;
-  width: 6.6rem;
 }
 
 /* Modal Menu Colors */
@@ -458,6 +456,10 @@ body:not(.overlay-header) .primary-menu > li > ul:after {
 .page .featured-media,
 .single-post .featured-media {
   display: none;
+}
+
+.single-wcb_sponsort .featured-media {
+  display: block;
 }
 
 /* Post Meta - Author, Date, Etc. */
